Fix an issue that sign out button was hard to read.

--- a/src/app/Styles/menu.scss
+++ b/src/app/Styles/menu.scss
@@ -114,7 +114,7 @@
   }
 }
 
-.warning {
+.text-warning {
   color: #d9534f !important;
 }
 
